# sealrun

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-check.yml
aion/: README.md
aion/docs/: architecture.md  capsules.md  compatibility-matrix.md  developer-guide.md  drift.md  migration.md  operations-guide.md  os_contract_spec.md  overview.md  pricing.md  replay.md  roadmap.md  security-guide.md  why-graph.md
aion/examples/: README.md
bindings/: README.md
canvases/: sealrun-enterprise-readiness-benchmark.canvas.tsx
crates/aion-cli/: Cargo.toml
crates/aion-guard/: Cargo.toml  README.md
crates/aion-repro/: Cargo.toml  README.md
docs/: README.md  SealRun_Enterprise_Sales_Package.md  buyer-guide.md  compatibility-matrix.md  faq.md  guided_tour.md  lifecycle-controls.md  multi-tenancy.md  oidc-auth.md  operations-guide.md  overview.md  policy-engine.md  pricing.md  rbac.md  release-attestation.md  roadmap-public.md  security-guide.md  security-whitepaper.md  siem-otel.md  sla.md  status-page-template.md  support-escalation-path.md  trust-center.md
examples/: README.md
legacy_gold/: IMPORT_AUDIT.md
repro/: Cargo.toml
repro/src/analysis/: system_evaluation.rs
repro/src/cli/: mod.rs
repro/src/core/: artifact.rs  capture.rs  causal_query.rs  diff.rs  event_store.rs  output.rs
repro/tests/: ci_baseline.rs  determinism.rs  e2e.rs  event_store.rs  real_cargo_workflow.rs  repro_real_scenario_1.rs
repro/tests/execution_semantics/: event_invariants.rs  event_order.rs  mod.rs
(+143 files in other folders)
