[workspace]
resolver = "2"
members = ["crates/aion-cli", "crates/aion-repro", "crates/aion-guard"]
default-members = ["crates/aion-cli", "crates/aion-repro", "crates/aion-guard"]
# Path dependency `repro` → `cos/core` is not a workspace member; keep it out of `cargo metadata` workspace_members.
exclude = ["cos/core"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
